Uploaded image for project: 'Thrift'
  1. Thrift
  2. THRIFT-5395

inconsistent treatment of methods ending in "Async"

    XMLWordPrintableJSON

Details

    • Bug
    • Status: Closed
    • Major
    • Resolution: Fixed
    • None
    • 0.15.0
    • netstd - Compiler
    • None
    • Patch Available

    Description

      service MyService {
          void TestXsync()
          void TestAsync()
      }
      

      While the first works, the second does not::

      await OutputProtocol.WriteMessageBeginAsync(new TMessage("TestXsync", ...
      await OutputProtocol.WriteMessageBeginAsync(new TMessage("TestAsyncAsync", ...
      

      Attachments

        Issue Links

          Activity

            People

              jensg Jens Geyer
              jensg Jens Geyer
              Votes:
              0 Vote for this issue
              Watchers:
              2 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                Time Tracking

                  Estimated:
                  Original Estimate - Not Specified
                  Not Specified
                  Remaining:
                  Remaining Estimate - 0h
                  0h
                  Logged:
                  Time Spent - 40m
                  40m