THRIFT-5395 inconsistent treatment of methods ending in "Async" Client: netstd Patch: Jens Geyer